# RAG-QA-Chatbot

./: .gitignore  main.ipynb  main.py  pyproject.toml  requirements.txt
